rebase here when koin annotation is support ksp 2.0

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,9 +21,11 @@ kotlinx-datatime = "0.6.1"
 decompose = "3.1.0"
 
 room = "2.7.0-alpha09"
+#ksp = "2.0.20-1.0.24"
 ksp = "2.0.20-1.0.24"
 sqlite = "2.5.0-SNAPSHOT"
 
+koin = "4.0.0"
 koin-anotation = "1.4.0-RC4"
 
 [libraries]
@@ -57,9 +59,10 @@ room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
 
 #ksp
-koin-anotation-bom = { group = "io.insert-koin", name = "koin-annotations-bom", version.ref = "koin-anotation" }
-koin-anotation = { group = "io.insert-koin", name = "koin-annotations" }
-koin-anotation-ksp = { group = "io.insert-koin", name = "koin-ksp-compiler" }
+koin-anotation = { group = "io.insert-koin", name = "koin-annotations", version.ref = "koin-anotation" }
+koin-ksp-compiler = { group = "io.insert-koin", name = "koin-ksp-compiler", version.ref = "koin-anotation" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
