--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,9 @@
 #Kotlin
 kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx2048M
-
+kotlin.native.disableCompilerDaemon=true
 #Gradle
 org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8
-
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
