--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.2.2"
+agp = "8.3.2"
 android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
@@ -22,10 +22,9 @@ decompose = "3.1.0"
 
 room = "2.7.0-alpha10"
 ksp = "2.0.20-1.0.25"
-sqlite = "2.5.0-SNAPSHOT"
+sqlite = "2.5.0-alpha10"
 
-koin = "4.0.0"
-koin-anotation = "1.4.0-RC4"
+kotlin-inject = "0.7.2"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -53,15 +52,16 @@ decompose-compose = { module = "com.arkivanov.decompose:extensions-compose", ver
 
 #room
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+room-common = { module = "androidx.room:room-common", version.ref = "room" }
 room-runtime-android = { module = "androidx.room:room-runtime-android", version.ref = "room" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
-sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
 
-#ksp
-koin-anotation = { group = "io.insert-koin", name = "koin-annotations", version.ref = "koin-anotation" }
-koin-ksp-compiler = { group = "io.insert-koin", name = "koin-ksp-compiler", version.ref = "koin-anotation" }
-koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
-koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
+sqlite = { module = "androidx.sqlite:sqlite", version.ref = "sqlite" }
+
+#kotlin-inject
+kotlin-inject = { group = "me.tatarka.inject", name = "kotlin-inject-runtime-kmp", version.ref = "kotlin-inject" }
+kotlin-inject-compiler-ksp = { group = "me.tatarka.inject",name = "kotlin-inject-compiler-ksp", version.ref = "kotlin-inject" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
