migrate to default koin module late migrate to koin annotation ore kotlin-inject

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,7 +25,6 @@ ksp = "2.0.20-1.0.25"
 sqlite = "2.5.0-SNAPSHOT"
 
 koin = "4.0.0"
-koin-anotation = "1.4.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -57,11 +56,10 @@ room-runtime-android = { module = "androidx.room:room-runtime-android", version.
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
 
-#ksp
-koin-anotation = { group = "io.insert-koin", name = "koin-annotations", version.ref = "koin-anotation" }
-koin-ksp-compiler = { group = "io.insert-koin", name = "koin-ksp-compiler", version.ref = "koin-anotation" }
-koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
-koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+#koin
+koin-bom = { group = "io.insert-koin", name = "koin-bom",version.ref = "koin" }
+koin-core = { group = "io.insert-koin", name = "koin-core" }
+koin-android = { group = "io.insert-koin",name = "koin-android"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
