--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.2.2"
+agp = "8.5.0"
 android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
@@ -15,15 +15,16 @@ compose-plugin = "1.7.0"
 junit = "4.13.2"
 kotlin = "2.0.20"
 kotlinx-coroutines = "1.9.0"
-kotlinx-serialization = "1.7.3"
+kotlinx-serialization = "1.7.1"
 kotlinx-datatime = "0.6.1"
 
-decompose = "3.2.0"
+decompose = "3.2.1"
+essenty = "2.2.1"
 
 room = "2.7.0-alpha11"
 datastore = "1.1.1"
 ksp = "2.0.20-1.0.25"
-sqlite = "2.5.0-SNAPSHOT"
+sqlite = "2.5.0-alpha11"
 
 koin = "4.0.0"
 
@@ -50,6 +51,10 @@ kotlinx-data-time = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime"
 
 decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
 decompose-compose = { module = "com.arkivanov.decompose:extensions-compose", version.ref = "decompose" }
+essenty-lifecycle = { group = "com.arkivanov.essenty", name = "lifecycle", version.ref = "essenty" }
+essenty-stateKeeper = { group = "com.arkivanov.essenty", name = "state-keeper", version.ref = "essenty" }
+essenty-instanceKeeper = { group = "com.arkivanov.essenty", name = "instance-keeper", version.ref = "essenty" }
+essenty-backHandler = { group = "com.arkivanov.essenty", name = "back-handler", version.ref = "essenty" }
 
 #room
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
@@ -61,9 +66,9 @@ datastore = { module = "androidx.datastore:datastore-preferences", version.ref =
 
 
 #koin
-koin-bom = { group = "io.insert-koin", name = "koin-bom",version.ref = "koin" }
+koin-bom = { group = "io.insert-koin", name = "koin-bom", version.ref = "koin" }
 koin-core = { group = "io.insert-koin", name = "koin-core" }
-koin-android = { group = "io.insert-koin",name = "koin-android"}
+koin-android = { group = "io.insert-koin", name = "koin-android" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
